# dynamatic

./: test_asic_flow.sh
data/: rtl-config-asic-sky130.json  rtl-config-vhdl.json
docs/: ASIC_SUPPORT.md
examples/: asic_example.c
experimental/tools/: CMakeLists.txt
include/dynamatic/: Integration.h
lib/Transforms/BufferPlacement/: BufferPlacementMILP.cpp
tools/: CMakeLists.txt  specify-python.sh
tools/backend/asic-flow/: asic_flow.py
tools/backend/lsq-generator-python/: lsq-generator.sh
tools/dynamatic/: dynamatic.cpp
tools/dynamatic/scripts/: compile.sh  simulate.sh
tools/export-asic/: CMakeLists.txt  export-asic.cpp
tools/export-rtl/: export-rtl.cpp
tools/hls-verifier/: hls-verifier.cpp
tools/hls-verifier/include/: VerificationContext.h
tools/hls-verifier/lib/: HlsVhdlTb.cpp
